=== CHANGELOG ===

v0.1.0 (2011-06-07)

  * Changed default online player controls to same as player 1. Reset everyone's settings to default.
  * Collects game-play statistics locally (for achievements).
  * Added achievements and unlocks system.
  * Added some more sound effects (but nowhere near enough).
  * Can't pick up creatures that can hurt you, or the other player, unless they are knocked down first.
  * Knocked back when hit by a monster, rather than taking damage-over time (fire still burns slowly, however).
  * Gods love certain sacrifices at any given time, which will net greatly increased favour.
  * Favour of object currently carried is indicated next to favour bars.
  * Can set sound volume and window size in options (sorry, no full-screen mode yet).
  * Added 2 new playable priests.
  * Added creature spawning (how could I not have put it in yet?) and reduced favour value of most objects.
  * Containers, such as chests, spawn items if left empty.
  * Added level under the sea.
  * Added level in a tech facility (AI _are_ gods, aren't they?).
  * Added level in a desert (reused lighting storm disaster effect, though, until unique one created)
  * Added level on a moon with radioactive meteors.
  * Network stats overlay (Ctrl-N).
  * FIXED: Poison/growth status effects are not properly synchronised in network play.
  * Countless other things I forgot to write down.

  Significant issues:
    * Possible to juggle (continually pick up and throw) the other player, so they never get to act.
    * Possible to get killed by being continually hit into a wall.
    * Enemies don't care if they are getting killed in lava, etc.

v0.0.3alpha (2011-05-17)

  * === Now works on Linux from source (rolled back some libraries for maximum compatibility).
  * === Now works on OS X from source (rolled back some libraries for maximum compatibility).
  * === Executable for OS X 10.6 added.
