@@ -4,25 +4,14 @@ class Level < GameState
     DEFAULT_TILE = Plastic
 
     GOD = Ai
-    SPAWNS = {
-        CompanionCube => 5,
-        TestSubject => 2,
-        Turret => 6,
-    }
-
-    # This is relative to the altar.
-    PLAYER_SPAWNS = [[-12, 0], [12, 0]]
 
     def self.to_s; "D.O.O.M. Test Facility"; end
 
-
     def create_objects
-      super(PLAYER_SPAWNS)
+      super
 
       # Static objects.
       18.times { Block.create(stack: [1, 1, 1, 1, 2, 2, 3].sample) }
-
-      2.times { Portal.create }
 
       (0...$window.retro_width).step(9) do |x|
         Block.create(x: x + 4, y: 16, stack: 2)
